--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
     <main>
         <iframe src="https://misterlauncher.org/server_chart/17009/" width="100%" height="300" frameborder="0"></iframe>
+        <iframe src="https://misterlauncher.org/server_chart/17009/" width="100%" height="300" frameborder="0"></iframe>
     </main>
 </body>
 
