--- a/index.html
+++ b/index.html
@@ -2,30 +2,37 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Img/logoMAIN.png" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/main.css">
-    <title>CUBOMetre | Приватный сервер Minecraft</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/main.css">
+	<script src="js/app.js" defer></script>
 </head>
 
 <body>
-    <header>
-        <nav>      
-            <input type="checkbox" name="menu" id="btn-menu" />
-            <label for="btn-menu"><img src="Img/menu__button.png" class="menu__ico" alt="ico_menu"></label> 
-            
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Rules</a></li>
-                <li><a href="#">Map</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <iframe src="https://misterlauncher.org/server_chart/17009/" width="100%" height="300" frameborder="0"></iframe>
-    </main>
+	<header class="main-header">
+		<div class="layers">
+			<div class="layers__header">
+				<div class="layers__caption">Добро пожаловать на сервер</div>
+				<div class="layers__title">CUBOMetre</div>
+			</div>
+			<div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
+			<div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
+			<div class="layer layers__front" style="background-image: url(img/layer-front.png);"></div>
+		</div>
+	</header>
+	<article class="main-article" style="background-image: url(img/dungeeon1.png);">
+		<div class="main-article__content">
+			<h2 class="main-article__header">Подключайся и не ломайся!</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, quod soluta dolore rerum, recusandae aperiam dolores, hic reprehenderit quos quasi nobis perferendis veritatis. Quam esse ipsa dolorum dolore incidunt repellendus! Debitis, magnam.</p>
+		</div>
+	</article>
+	<article class="main-article2" style="background-image: url(img/dungeon2.png);">
+		<div class="main-article2__content">Почитай еще и не тормози</div>
+		<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus atque aut perferendis autem nisi. Eligendi incidunt excepturi libero porro quam molestias tempore? Vitae, eos ipsum! Exercitationem ipsam natus aut numquam distinctio delectus quis officia ipsa!</p>
+		<div class="copy">© Steve Blocks Team</div>
+	</article>
 </body>
 
 </html>
